fix styling on Firefox

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
-/* === Form Typography === */
+@import url("sanitize.css");
 
+/* === Form Typography === */
 .contact_form h2,
 .contact_form,
 .results__heading,
@@ -22,93 +23,58 @@ label {
 }
 
 /* === Form Elements === */
-/* #plz {
-  width: 100%;
-  padding: 0.5vh 0.2vw;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-#stadt {
-  width: 100%;
-  padding: 0.5vh 0.2vw;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-#straße_input {
-  width: 100%;
-  padding: 0.5vh 0.2vw;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-#hausnummer {
-  width: 100%;
-  padding: 0.5vh 0.2vw;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
-
-#land {
-  width: 100%;
-  padding: 0.5vh 0.2vw;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-} */
-
-label {
-  padding: 1.7vw 1.7vw 1.7vw 0;
-  /* display: inline-block; */
-}
-
 .form_container {
   display: inline-flex;
   flex-flow: row wrap;
   max-width: 80%;
-  /* border-style: solid;
-  border-width: 0.1vw;
-  border-color: lightgray; */
   border-radius: 0.3vw;
   background-color: #f2f2f2;
   padding: 1.4vw;
 }
 
 .form_container li {
-  padding: 0.5vw;
+  padding: 0.6vw;
 }
 
 #plz_li {
   flex: 1 1 auto;
+  margin-right: 2.5vw;
 }
 
 #plz_label {
-  padding-right: 2vw;
+  padding-right: 1.4vw;
 }
 
 #stadt_li {
   flex: 2 2 25vw;
 }
 
+#stadt_label {
+  padding-right: 0.5vw;
+}
+
 #stadt {
-  width: 80%;
+  width: 87%;
 }
 
 #straße_li {
   flex: 2 2 25vw;
 }
 
-#straße_li label {
-  padding-left: 0vw;
+#straße_label {
+  padding-right: 0.3vw;
 }
 
 #straße_input {
   width: 80%;
+}
+
+#land_li {
+  flex: 1 1 100%;
+}
+
+#land {
+  width: 91.5%;
 }
 
 .contact_form label {
